--- a/Full.ipynb
+++ b/Full.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6OPsaBb1Mx9aKblOBOgns",
+      "authorship_tag": "ABX9TyNWN+BFTxd3KLcGRkaDz2aZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,69 @@
         "id": "Pqntat2oGKc6"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import matplotlib.pyplot as plt\n",
+        "from tqdm import tqdm\n",
+        "import sys\n",
+        "sys.path.append(\"..\")\n",
+        "\n",
+        "from src.bb84 import BB84Core\n",
+        "from src.defender import Defender\n",
+        "from src.adversary import Adversary\n",
+        "\n",
+        "# Load everything\n",
+        "bb84 = BB84Core(128)\n",
+        "defender = Defender()\n",
+        "adversary = Adversary()\n",
+        "\n",
+        "# Or load pre-trained weights if you want\n",
+        "# defender.load_state_dict(torch.load(\"src/defender.pth\"))\n",
+        "# adversary.load_state_dict(torch.load(\"src/adversary.pth\"))\n",
+        "\n",
+        "opt_d = optim.Adam(defender.parameters(), lr=0.001)\n",
+        "opt_a = optim.Adam(adversary.parameters(), lr=0.001)\n",
+        "\n",
+        "eve_accs = []\n",
+        "\n",
+        "for epoch in tqdm(range(5000)):\n",
+        "    ak, ab, bb = bb84.generate_keys_bases()\n",
+        "    state = torch.randn(128, 16)\n",
+        "    angles = defender(state).detach().cpu().numpy().flatten().tolist()\n",
+        "\n",
+        "    bk = bb84.run_protocol(ak, ab, bb, tweak_angles=angles)\n",
+        "\n",
+        "    # Sifting\n",
+        "    X, y = [], []\n",
+        "    for i in range(128):\n",
+        "        if ab[i] == bb[i]:\n",
+        "            X.append([bk[i], 1.0 if ab[i]=='X' else 0.0, angles[i]])\n",
+        "            y.append(ak[i])\n",
+        "\n",
+        "    if len(X) < 10: continue\n",
+        "    X = torch.tensor(X, dtype=torch.float32)\n",
+        "    y = torch.tensor(y, dtype=torch.float32)\n",
+        "\n",
+        "    pred = adversary(X)\n",
+        "    loss_a = nn.BCELoss()(pred, y)\n",
+        "    loss_d = -loss_a\n",
+        "\n",
+        "    opt_a.zero_grad(); loss_a.backward(retain_graph=True); opt_a.step()\n",
+        "    opt_d.zero_grad(); loss_d.backward(); opt_d.step()\n",
+        "\n",
+        "    if epoch % 100 == 99:\n",
+        "        acc = ((pred > 0.5) == y.bool()).float().mean().item()\n",
+        "        eve_accs.append(100 * acc)\n",
+        "        print(f\"Epoch {epoch+1} → Eve accuracy: {100*acc:.1f}%\")\n",
+        "\n",
+        "# Save final models\n",
+        "torch.save(defender.state_dict(), \"src/defender_trained.pth\")\n",
+        "torch.save(adversary.state_dict(), \"src/adversary_trained.pth\")\n",
+        "\n",
+        "plt.plot(eve_accs); plt.title(\"Eve gets weaker over time\"); plt.show()"
+      ]
     }
   ]
 }
