--- a/Defender.ipynb
+++ b/Defender.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3ZKh8F/icV4Dv9KJsbvw4",
+      "authorship_tag": "ABX9TyNS2wbG+GRPSAy01ONel0Lg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "D7sR_N5xFfEq"
+        "id": "D7sR_N5xFfEq",
+        "outputId": "455385d8-c18a-45ce-b8de-bbdda1e7d08c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Defender ready → outputs angles in -0.05594899132847786 to 0.09342407435178757\n"
+          ]
+        }
+      ],
       "source": [
+        "'''Defender. Takes a 16-dimensional classical observation of the quantum channel and outputs a corrective polarization\n",
+        "rotation angle in [-0.5, +0.5] radians.'''\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "\n",
+        "#Defining neural network called defender that inherits from torch.nn.module\n",
         "class Defender(nn.Module):\n",
         "    def __init__(self, state_dim=16, max_angle=0.5):\n",
         "        super().__init__()\n",
+        "        #This multi-layer percreptron(MLP) takes what is perceived and guides to an action.\n",
         "        self.net = nn.Sequential(\n",
-        "            nn.Linear(state_dim, 64), nn.ReLU(),\n",
-        "            nn.Linear(64, 32), nn.ReLU(),\n",
-        "            nn.Linear(32, 1), nn.Tanh()\n",
+        "            nn.Linear(state_dim, 64), #Expand for more details\n",
+        "            nn.ReLU(), #Introduces non-linearity and sparsity allowing it to learn complex patterns and be more computationally efficient\n",
+        "            nn.Linear(64, 32), #Refine\n",
+        "            nn.ReLU(), #Second non-linear decision boundary\n",
+        "            nn.Linear(32, 1), #Refine to one regression value\n",
+        "            nn.Tanh() #Bound ouput from -1,1\n",
         "        )\n",
         "        self.max_angle = max_angle\n",
         "\n",
@@ -51,6 +70,7 @@
         "        return self.net(state) * self.max_angle\n",
         "\n",
         "# Test\n",
+        "#Simulate 128 random quantum channel states with 16 dimensional classical observations\n",
         "state = torch.randn(128, 16)\n",
         "defender = Defender()\n",
         "angles = defender(state)\n",
@@ -59,9 +79,13 @@
         "# SAVE IT\n",
         "import os\n",
         "os.makedirs(\"src\", exist_ok=True)\n",
-        "torch.save(defender.state_dict(), \"src/defender.pth\")\n",
-        "\n",
-        "# Export class to .py\n",
+        "torch.save(defender.state_dict(), \"src/defender.pth\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Export to .py\n",
         "%%writefile src/defender.py\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -78,6 +102,23 @@
         "\n",
         "    def forward(self, state):\n",
         "        return self.net(state) * self.max_angle"
+      ],
+      "metadata": {
+        "id": "CetbgWWYhfLt",
+        "outputId": "0396a159-5b57-40f7-ce98-6dd1270077c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing src/defender.py\n"
+          ]
+        }
       ]
     }
   ]
